--- a/courses.html
+++ b/courses.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <link href="assignment3.css" rel="stylesheet" type="text/css" />
+    </head>
     <h1>Creative Technologies Courses (CTK)</h1>
 
     <img src="typing.jpg" alt="Feminine hands typing on a keyboard.">
 
     <ul>
-        <li><a href=assignment2.html>Main Page</a></li>
+        <li><a href=assignment3.html>Main Page</a></li>
         <li><a href=information.html>Requirements</a></li>
         <li><a href=courses.html>Classes</a></li>
     </ul>
