--- a/information.html
+++ b/information.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <link href="assignment3.css" rel="stylesheet" type="text/css" />
+    </head>
     <h1>Creative Technologies Program (CTK) Requirements</h1>
 
     <img src="guytyping1.jpg" alt="Fellow typing on a  computer.">
 
 <ul>
-    <li><a href=assignment2.html>Main Page</a></li>
+    <li><a href=assignment3.html>Main Page</a></li>
     <li><a href=information.html>Requirements</a></li>
     <li><a href=courses.html>Classes</a></li>
 </ul>
 
 <h2>Retention Requirements</h2>
 <ul>
-<li><strong>Sequence in Audio and Music Production and Interdisciplinary Technologies</strong> - Students will be allowed to continue in this sequence <i>if they meet and continue to maintain an overall cumulative GPA of 2.00.</i></li>
-<li><strong>Sequence in Game Design</strong> - Students will be allowed to continue in this sequence <i>if they meet and continue to maintain an overall cumulative GPA of 2.50 and a cumulative GPA of 3.0 within the major.</i> Additionally, students in the Game Design Sequence must maintain consecutive Fall–Spring enrollment in their final at the University. Any student not enrolled at the university for more than one semester must reapply to the sequence. Students who leave the Sequence in Game Design may continue as a Creative Technologies major in Audio and Music Production or Interdisciplinary Technologies <i>if they have an overall cumulative GPA of 2.00.</i></li>
+<li><strong>Sequence in Audio and Music Production and Interdisciplinary Technologies</strong> - Students will be allowed to continue in this sequence <span class=classone><i>if they meet and continue to maintain an overall cumulative GPA of 2.00.</i></span></li>
+<li><strong>Sequence in Game Design</strong> - Students will be allowed to continue in this sequence <span class=classone><i>if they meet and continue to maintain an overall cumulative GPA of 2.50 and a cumulative GPA of 3.0 within the major.</i></span> Additionally, students in the Game Design Sequence must maintain consecutive Fall–Spring enrollment in their final at the University. Any student not enrolled at the university for more than one semester must reapply to the sequence. Students who leave the Sequence in Game Design may continue as a Creative Technologies major in Audio and Music Production or Interdisciplinary Technologies <span class=classone><i>if they have an overall cumulative GPA of 2.00.</i></span></li>
 </ul>
 
 <h2>Standards for Progress in the Major</h2>
