--- a/Blank1200px.html
+++ b/Blank1200px.html
@@ -4,6 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Mason Cook</title>
 	<link href="Blank1200px.css" rel="stylesheet" type="text/css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=DM+Serif+Display:ital@0;1&family=Jersey+20+Charted&family=Teko:wght@300..700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+	
 </head>
 
 <body>
@@ -23,21 +28,24 @@
 	</nav>
 	
 	<aside>
-		<img src="Camera.jpg" alt="Picture of a sculpture of a camera." width="230" class="photograph">
+		<img src="joey.jpg" alt="Drawing of a young man with a bizarre hat." width="230" class="photograph">
 		<p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor ipsum velit ratione obcaecati vitae aperiam ducimus inventore sint recusandae voluptatem atque rem optio, eos itaque repudiandae eligendi iusto perspiciatis praesentium!</p>
-	</aside>\
+	</aside>
 	<br>
 	<aside>
-		<img src="Camera.jpg" alt="Picture of a sculpture of a camera." width="230" class="photograph">
+		<img src="donnyosmond.png" alt="Drawing of a boxer and his fighting ghost." width="230" class="photograph">
 		<p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor ipsum velit ratione obcaecati vitae aperiam ducimus inventore sint recusandae voluptatem atque rem optio, eos itaque repudiandae eligendi iusto perspiciatis praesentium!</p>
 	</aside>
 	<br>
 	<main>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere doloremque maiores velit fugiat magni culpa eaque <div id="emphasis">corrupti eos repudiandae</div> alias officiis quibusdam nam eius inventore quia hic, ea quas porro.</p>
-		<img src="Snowman.jpg" alt="Picture of a Snowman." width="275">
+		<iframe width="280" height="157" src="https://www.youtube.com/embed/fGXxYEenJxw?si=lkgUYyU-cdYIi2GJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 	</main>
 	<footer>
 		<a href="https://illinoisstate.edu/"><img src="wordmark_isu.png" alt="Illinois State University Logo."></a>
+		<a href="https://www.instagram.com/illinoisstateu/" target="_blank" class="bi bi-instagram"></a>
+		<a href="https://twitter.com/IllinoisStateU?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank" class="bi bi-twitter"></a>
 	</footer>
 	</div>
 </body>
