--- a/AboutMe.html
+++ b/AboutMe.html
@@ -22,7 +22,7 @@
 		<li id="blacksuit"><a href="HomePage.html">Home ♠</a></li>
 		<li id="redsuit"><a href="AboutMe.html">About Me ♦</a></li>
 		<li id="blacksuit"><a href="Gallery.html">Gallery ♣</a></li>
-		<li id="redsuit"><a href="#">Upcoming ♥</a></li>
+		<li id="redsuit"><a href="Upcoming.html">Upcoming ♥</a></li>
 	</ul>
 	<br>
 	</nav>
