--- a/HomePage.html
+++ b/HomePage.html
@@ -22,7 +22,7 @@
 		<li id="blacksuit"><a href="HomePage.html">Home ♠</a></li>
 		<li id="redsuit"><a href="AboutMe.html">About Me ♦</a></li>
 		<li id="blacksuit"><a href="Gallery.html">Gallery ♣</a></li>
-		<li id="redsuit"><a href="#">Upcoming ♥</a></li>
+		<li id="redsuit"><a href="Upcoming.html">Upcoming ♥</a></li>
 	</ul>
 	<br>
 	</nav>
@@ -40,8 +40,8 @@
 	<main>
 		<p>This video is a showcase of a frequent collaborator of mine, <div id="emphasis">Veikka Toivari</div> a Finnish director and comedian.</p>
 		<iframe width="280" height="157" src="https://www.youtube.com/embed/fGXxYEenJxw?si=lkgUYyU-cdYIi2GJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
 	</main>
+	<br>
 	<footer>
 		<a href="https://illinoisstate.edu/"><img src="wordmark_isu.png" alt="Illinois State University Logo."></a>
 		<a href="https://www.instagram.com/illinoisstateu/" target="_blank" class="bi bi-instagram"></a>
